# appfalecomjesus

./: .dockerignore  .env.example  .gitignore  nginx.conf  temp.json
backend/ms-study/: .commitlintrc.json  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py  setup.cfg
backend/ms-study/alembic/: env.py
backend/ms-study/alembic/versions/: 001_create_study_tables.py  002_add_certificates_table.py  003_generate_certificates_for_completed_plans.py
backend/ms-study/app/: __init__.py  deps.py  main.py
backend/ms-study/app/api/: api.py  deps.py
backend/ms-study/app/api/v1/: api.py  (+3 more)
backend/ms-study/app/core/: config.py
backend/ms-study/app/database/: base_class.py  db.py
backend/ms-study/app/db/: base.py  redis.py  session.py
backend/ms-study/app/infrastructure/: database.py
backend/ms-study/app/models/: __init__.py  certificate.py  reflection.py  study.py  study_content.py  study_plan.py  study_section.py  user_study_progress.py
backend/ms-study/app/repositories/: certificate_repository.py  study_content_repository.py  study_plan_repository.py  study_section_repository.py  user_study_progress_repository.py
backend/ms-study/app/schemas/: certificate.py  progress.py  study.py  study_content.py  study_plan.py  study_section.py  user_study_progress.py
backend/ms-study/app/services/: certificate_service.py  chatia.py  progress_service.py  reflection_service.py  study.py  study_plan_service.py  study_progress_service.py  user_service.py
(+1405 files in other folders)
