[metadata]
name = falecomjesus-ms-study
version = 1.0.0
description = Microsserviço de Estudos do FaleComJesus
author = FaleComJesus Team
author_email = team@falecomjesus.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
exclude =
    tests*
    docs*
    alembic*
    .git*
    .env*
    venv*
    __pycache__*
    *.pyc
    *.pyo
    *.pyd
    .Python
    build*
    dist*
    *.egg-info*
    .eggs*
    .tox*
    .coverage*
    .pytest_cache*
    .mypy_cache*
    .flake8*
    .black*
    .isort*
    .vscode*
    .idea* 